Thu Aug 24 17:55:47 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* des_crc.c, des_md5.c, raw_des.c: Remove casting in call to
		mit_des_cbc_encrypt. 

Thu Jul 27 15:15:46 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add --enable-{des-cbc-md5,des-cbc-crc,raw-des-cbc,
		des-cbc-cksum,crc32,rsa-md4,rsa-md5} which set the appropriate
		preprocessor flags which used to be set in k5-config.h.
	* cryptoconf.c - Set the KEYTYPE_DES entry to the DES-CBC-MD5 entry
		if enabled, then the DES-CBC-CRC entry, if enabled, then to
		null.

Fri Jun 23 12:16:52 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* configure.in: krb5_cv_staticlibs_enabled, not
        krb5_cv_enable_staticlibs

Thu Jun 22 18:34:26 1995  Sam Hartman  (hartmans@tardis)

	* configure.in: Changed to new scheme for static libs.



Fri Jun 16 11:14:50 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add install target for shared library.


Thu Jun 15 17:58:41 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Add definitions for shared library building rules.
		Add explicit dependency on "shared" since we probably need it.
	* configure.in - Create symlinks for archive and shared library when
		we build them.

Fri Jun  9 18:52:19 1995    <tytso@rsx-11.mit.edu>

	* des_crc.c, des_md5.c: Fix -Wall nits.

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.  Use DO_SUBDIRS to
		recurse down subdirectories.

Thu May 25 22:15:18 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for shared libraries.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.
        * *.h added FAR to pointers visible at to the world.

Tue Mar 28 20:00:00 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: more of nmake's strange behavior. Problem goes
	   away with the addition of a nop line.

Wed Mar 22 11:28:08 1995 Keith Vetter (keithv@fusion.com)
