@@ -47,8 +47,7 @@ static krb5_cryptosystem_entry mit_des_crc_cryptosystem_entry = {
     sizeof(mit_des_cblock),
     CRC32_CKSUM_LENGTH+sizeof(mit_des_cblock),
     sizeof(mit_des_cblock),
-    ETYPE_DES_CBC_CRC,
-    KEYTYPE_DES
+    KEYTYPE_DES_CBC_CRC
     };
 
 krb5_cs_table_entry krb5_des_crc_cst_entry = {
