@@ -45,8 +45,7 @@ static krb5_cryptosystem_entry mit_raw_des_cryptosystem_entry = {
     sizeof(mit_des_cblock),
     0,
     sizeof(mit_des_cblock),
-    ETYPE_RAW_DES_CBC,
-    KEYTYPE_DES
+    KEYTYPE_DES_CBC_RAW
     };
 
 krb5_cs_table_entry krb5_raw_des_cst_entry = {
