@@ -1,3 +1,10 @@
+
+Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)
+
+        * cryptoconf.c : Remove krb5_csarray.
+	* cryptoconf.c, des_crc.c, des_md5.c, raw_des.c : Remove krb5_enctype 
+		references, and replace with krb5_keytype where appropriate.
+
 Thu Aug 24 17:55:47 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* des_crc.c, des_md5.c, raw_des.c: Remove casting in call to
